[CCUK-3686] added vertical align top to make sure IE aligns containers that have display cell instead of pushing some of them down [rev:matthew.gordon2]

--- a/find-core/src/main/public/static/css/app-include.css
+++ b/find-core/src/main/public/static/css/app-include.css
@@ -309,6 +309,7 @@ html, body {
 .middle-container {
     padding: 10px 15px;
     display: table-cell;
+    vertical-align: top;
 }
 
 .right-side-container h4,
